tests/error/modifier_errors/type_check_in_block.py
from guppylang.decorator import guppy


@guppy
def test() -> None:
    with dagger:
        1 + True


test.compile()
